// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PermissionsForm Renders a permissions form 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-container"
  >
    <button
      class="PodBrowser-root PodBrowser-root PodBrowser-text PodBrowser-summary"
      data-testid="permissions-dropdown-button"
      tabindex="0"
      type="button"
    >
      <span
        class="PodBrowser-label"
      >
        <span>
          Control
        </span>
        <span
          class="PodBrowser-endIcon PodBrowser-iconSizeMedium"
        >
          <svg
            aria-hidden="true"
            class="PodBrowser-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
            />
          </svg>
        </span>
      </span>
      <span
        class="PodBrowser-root"
      />
    </button>
    <section
      class="PodBrowser-selectionClosed"
    >
      <ul
        class="PodBrowser-root PodBrowser-padding"
      >
        <li
          class="PodBrowser-root PodBrowser-listItem PodBrowser-gutters"
        >
          <label
            class="PodBrowser-root"
            data-testid="permission-checkbox-view"
          >
            <span
              aria-disabled="false"
              class="PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-checkbox PodBrowser-colorSecondary PodBrowser-checked PodBrowser-checked PodBrowser-colorSecondary"
            >
              <span
                class="PodBrowser-label"
              >
                <input
                  checked=""
                  class="PodBrowser-input"
                  data-indeterminate="false"
                  name="view"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="PodBrowser-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                  />
                </svg>
              </span>
              <span
                class="PodBrowser-root"
              />
            </span>
            <span
              class="PodBrowser-root PodBrowser-label PodBrowser-label PodBrowser-body1"
            >
              View
            </span>
          </label>
        </li>
        <li
          class="PodBrowser-root PodBrowser-listItem PodBrowser-gutters"
        >
          <label
            class="PodBrowser-root"
            data-testid="permission-checkbox-edit"
          >
            <span
              aria-disabled="false"
              class="PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-checkbox PodBrowser-colorSecondary PodBrowser-checked PodBrowser-checked PodBrowser-colorSecondary"
            >
              <span
                class="PodBrowser-label"
              >
                <input
                  checked=""
                  class="PodBrowser-input"
                  data-indeterminate="false"
                  name="edit"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="PodBrowser-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                  />
                </svg>
              </span>
              <span
                class="PodBrowser-root"
              />
            </span>
            <span
              class="PodBrowser-root PodBrowser-label PodBrowser-label PodBrowser-body1"
            >
              Edit
            </span>
          </label>
        </li>
        <li
          class="PodBrowser-root PodBrowser-listItem PodBrowser-gutters"
        >
          <label
            class="PodBrowser-root"
            data-testid="permission-checkbox-append"
          >
            <span
              aria-disabled="false"
              class="PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-checkbox PodBrowser-colorSecondary PodBrowser-checked PodBrowser-checked PodBrowser-colorSecondary"
            >
              <span
                class="PodBrowser-label"
              >
                <input
                  checked=""
                  class="PodBrowser-input"
                  data-indeterminate="false"
                  name="append"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="PodBrowser-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                  />
                </svg>
              </span>
              <span
                class="PodBrowser-root"
              />
            </span>
            <span
              class="PodBrowser-root PodBrowser-label PodBrowser-label PodBrowser-body1"
            >
              Append
            </span>
          </label>
        </li>
        <li
          class="PodBrowser-root PodBrowser-listItem PodBrowser-gutters"
        >
          <label
            class="PodBrowser-root"
            data-testid="permission-checkbox-control"
          >
            <span
              aria-disabled="false"
              class="PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-checkbox PodBrowser-colorSecondary PodBrowser-checked PodBrowser-checked PodBrowser-colorSecondary"
            >
              <span
                class="PodBrowser-label"
              >
                <input
                  checked=""
                  class="PodBrowser-input"
                  data-indeterminate="false"
                  name="control"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="PodBrowser-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                  />
                </svg>
              </span>
              <span
                class="PodBrowser-root"
              />
            </span>
            <span
              class="PodBrowser-root PodBrowser-label PodBrowser-label PodBrowser-body1"
            >
              Control
            </span>
          </label>
        </li>
      </ul>
    </section>
  </div>
</DocumentFragment>
`;

exports[`PermissionsForm arrowIcon it returns the down arrow when open is false 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="PodBrowser-root"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
    />
  </svg>
</DocumentFragment>
`;

exports[`PermissionsForm arrowIcon it returns the up arrow when open is true 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="PodBrowser-root"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
    />
  </svg>
</DocumentFragment>
`;

exports[`PermissionsForm it returns null if control is false 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-container"
  >
    <button
      class="PodBrowser-root PodBrowser-root PodBrowser-text PodBrowser-summary"
      data-testid="permissions-dropdown-button"
      tabindex="0"
      type="button"
    >
      <span
        class="PodBrowser-label"
      >
        <span>
          Edit
        </span>
        <span
          class="PodBrowser-endIcon PodBrowser-iconSizeMedium"
        >
          <svg
            aria-hidden="true"
            class="PodBrowser-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
            />
          </svg>
        </span>
      </span>
      <span
        class="PodBrowser-root"
      />
    </button>
    <section
      class="PodBrowser-selectionClosed"
    >
      <ul
        class="PodBrowser-root PodBrowser-padding"
      >
        <li
          class="PodBrowser-root PodBrowser-listItem PodBrowser-gutters"
        >
          <label
            class="PodBrowser-root"
            data-testid="permission-checkbox-view"
          >
            <span
              aria-disabled="false"
              class="PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-checkbox PodBrowser-colorSecondary PodBrowser-checked PodBrowser-checked PodBrowser-colorSecondary"
            >
              <span
                class="PodBrowser-label"
              >
                <input
                  checked=""
                  class="PodBrowser-input"
                  data-indeterminate="false"
                  name="view"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="PodBrowser-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                  />
                </svg>
              </span>
              <span
                class="PodBrowser-root"
              />
            </span>
            <span
              class="PodBrowser-root PodBrowser-label PodBrowser-label PodBrowser-body1"
            >
              View
            </span>
          </label>
        </li>
        <li
          class="PodBrowser-root PodBrowser-listItem PodBrowser-gutters"
        >
          <label
            class="PodBrowser-root"
            data-testid="permission-checkbox-edit"
          >
            <span
              aria-disabled="false"
              class="PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-checkbox PodBrowser-colorSecondary PodBrowser-checked PodBrowser-checked PodBrowser-colorSecondary"
            >
              <span
                class="PodBrowser-label"
              >
                <input
                  checked=""
                  class="PodBrowser-input"
                  data-indeterminate="false"
                  name="edit"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="PodBrowser-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                  />
                </svg>
              </span>
              <span
                class="PodBrowser-root"
              />
            </span>
            <span
              class="PodBrowser-root PodBrowser-label PodBrowser-label PodBrowser-body1"
            >
              Edit
            </span>
          </label>
        </li>
        <li
          class="PodBrowser-root PodBrowser-listItem PodBrowser-gutters"
        >
          <label
            class="PodBrowser-root"
            data-testid="permission-checkbox-append"
          >
            <span
              aria-disabled="false"
              class="PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-checkbox PodBrowser-colorSecondary PodBrowser-checked PodBrowser-checked PodBrowser-colorSecondary"
            >
              <span
                class="PodBrowser-label"
              >
                <input
                  checked=""
                  class="PodBrowser-input"
                  data-indeterminate="false"
                  name="append"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="PodBrowser-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                  />
                </svg>
              </span>
              <span
                class="PodBrowser-root"
              />
            </span>
            <span
              class="PodBrowser-root PodBrowser-label PodBrowser-label PodBrowser-body1"
            >
              Append
            </span>
          </label>
        </li>
        <li
          class="PodBrowser-root PodBrowser-listItem PodBrowser-gutters"
        >
          <label
            class="PodBrowser-root"
            data-testid="permission-checkbox-control"
          >
            <span
              aria-disabled="false"
              class="PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-root PodBrowser-checkbox PodBrowser-colorSecondary PodBrowser-colorSecondary"
            >
              <span
                class="PodBrowser-label"
              >
                <input
                  class="PodBrowser-input"
                  data-indeterminate="false"
                  name="control"
                  type="checkbox"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="PodBrowser-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="PodBrowser-root"
              />
            </span>
            <span
              class="PodBrowser-root PodBrowser-label PodBrowser-label PodBrowser-body1"
            >
              Control
            </span>
          </label>
        </li>
      </ul>
    </section>
  </div>
</DocumentFragment>
`;
